[gd_scene load_steps=7 format=3 uid="uid://d1hvnnaemeca8"]

[ext_resource type="Script" path="res://pocion_vida.gd" id="1_d2tu6"]
[ext_resource type="Texture2D" uid="uid://c7fqdo60u1dj6" path="res://AssetsDeTest/Props_Items_(animated)/health_potion_item.png" id="3_rrjf0"]
[ext_resource type="AudioStream" uid="uid://b5xwc640esaqe" path="res://Sonidos/bonus_cc0.wav" id="3_u1mbb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j5qor"]

[sub_resource type="Animation" id="Animation_qegnx"]
resource_name = "idle_pocion"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7yyok"]
_data = {
"idle_pocion": SubResource("Animation_qegnx")
}

[node name="PocionVida" type="Node2D"]
script = ExtResource("1_d2tu6")

[node name="Area2DPocion" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DPocion"]
shape = SubResource("CircleShape2D_j5qor")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("3_rrjf0")

[node name="AnimationPocion" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_7yyok")
}
autoplay = "idle_pocion"

[node name="UsarPocion" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_u1mbb")
volume_db = 2.0

[connection signal="body_entered" from="Area2DPocion" to="." method="_on_area_2d_pocion_body_entered"]
